--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-sanity": "^5.0.5",
     "gatsby-transformer-sharp": "^2.3.13",
+    "html-react-parser": "^0.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
