--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@sanity/block-content-to-react": "^2.0.7",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.39",
